# NextCent

./: .gitignore  README.md  analysis_results.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: pyproject.toml  setup.py
apps/api/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  seed_data.py
apps/api/app/routers/: api.py
apps/api/app/services/: chat.py  finance.py  sanitization.py
apps/api/data/: merchant_actions.json  personas.json
apps/api/tests/: conftest.py  test_api.py  test_finance.py
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/app/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/components/: action-spotlight.tsx  app-shell.tsx  charts.tsx  chat-panel.tsx  credit-health-card.tsx  dashboard-focus-card.tsx  debt-account-card.tsx  debt-strategy-grid.tsx  expandable-note.tsx  insight-card.tsx  logo.tsx  metric-card.tsx  mobile-bottom-nav.tsx  mobile-more-sheet.tsx  mobile-shell-chrome.tsx  page-frame.tsx  persona-switcher.tsx  section-card.tsx  simulation-panel.tsx  status-pill.tsx  subscriptions-panel.tsx
apps/web/lib/: api.ts  cash-flow-presentation.ts  credit-health-presentation.ts  dashboard-presentation.ts  debt-optimizer-presentation.ts  format.ts  investment-presentation.ts  investment.ts  navigation.ts  page-data.ts
docs/architecture/: api-and-schema.md  llm-audit-examples.md  system-architecture.md
docs/branding/: brand-system.md  microcopy-patterns.md
scripts/: bootstrap_api.sh  run_api.sh  run_web.sh
(+10 files in other folders)
