[project]
name = "personal-accountant-ai-api"
version = "0.1.0"
description = "FastAPI backend for Personal Accountant AI"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.135.2",
  "psycopg2-binary==2.9.10",
  "uvicorn[standard]==0.42.0",
  "pydantic==2.12.5",
  "sqlalchemy==1.4.39",
  "python-dateutil==2.9.0.post0",
  "eval_type_backport==0.2.2"
]

[project.scripts]
app = "app.main:app"

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "httpx==0.28.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
